--- a/Spark DataFrame Basics.ipynb
+++ b/Spark DataFrame Basics.ipynb
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4d6eda72",
+   "id": "6d6ef21a",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "407eca3e",
+   "id": "e79fc429",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "83799340",
+   "id": "9ebcdbfe",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "fa83f063",
+   "id": "165177ac",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e4741eb8",
+   "id": "c5211a70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c05bb4d6",
+   "id": "d7271f98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "a998ffb8",
+   "id": "8f078c14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "c6c0444f",
+   "id": "2ba59bad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "3d34de74",
+   "id": "5f3cd133",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "9dd37dbd",
+   "id": "39a7be08",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "3afb4fd8",
+   "id": "7a79b715",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "b7101557",
+   "id": "2fd2696e",
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "d492431f",
+   "id": "8f6bc9ad",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "f8add9af",
+   "id": "08a544f5",
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "cefe34cc",
+   "id": "a897e81e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "7cc9d950",
+   "id": "d040fe73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "abfc4ab3",
+   "id": "5fa22844",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "4b509544",
+   "id": "d3f58514",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,9 @@
       "+---+----+\n",
       "| 30|Andy|\n",
       "+---+----+\n",
-      "\n"
+      "\n",
+      "23/02/10 14:56:28 WARN HeartbeatReceiver: Removing executor driver with no recent heartbeats: 620261 ms exceeds timeout 120000 ms\n",
+      "23/02/10 14:56:28 WARN SparkContext: Killing executors is not supported by current scheduler.\n"
      ]
     }
    ],
